# sqlmodel

./: README.md  db.db  exemplo_01.py  pyproject.toml
